# transformers-test-project

./: .gitignore  PROJECT_INFO.md  README.md  pyproject.toml  requirements.txt  setup.py  test_online.py
configs/: data_config.yaml  proxy_config.yaml  training_config.yaml
docs/: API.md
notebooks/: 01_quick_start.ipynb
scripts/: README_pre_commit.md  benchmark_models.sh  cleanup.sh  dev_setup.sh  download_data.sh  download_models.sh  enable_pre_commit.sh  install_dependencies.sh  make_proxy_permanent.sh  run_tests.sh  setup_environment.sh  setup_proxy.sh  test_full_framework.sh  test_gpu.sh  test_offline.sh  toggle_pre_commit.sh
src/transformers_test/: __init__.py  cli.py  data.py  gpu_utils.py  models.py  offline_test.py  proxy_utils.py  training.py  utils.py
tests/: __init__.py  test_data.py  test_models.py  test_training.py  test_utils.py
